--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -43,7 +43,7 @@ node_modules/
 jspm_packages/
 
 # Folder
-uploads/
+# uploads/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
